--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,10 @@ dependencies:
   timeago:
   flutter_image_compress:
   image_cropper:
+  zego_uikit_prebuilt_video_conference:
+#  zego_zim: ^2.7.1
+#  zego_zimkit: ^1.3.1
+#  zego_uikit_prebuilt_call: ^3.0.1
 
 
 dev_dependencies:
